@@ -99,10 +99,11 @@ Complete list of settings that you can put into ``testenv*`` sections:
          
     **default on environments using python2.5**::
 
-        pip install --insecure {opts} {packages}`` 
+        pip install {opts} {packages}`` 
 
-    (this will use pip<1.4 (so no ``--pre`` option) and python2.5 
-    typically has no SSL support, therefore ``--insecure``).
+    this will use pip<1.4 which has no ``--pre`` option.  Note also
+    that for python2.5 support you may need to install ssl and/or
+    use ``setenv = PIP_INSECURE=1`` in a py25 based testenv.
 
 .. confval:: whitelist_externals=MULTI-LINE-LIST
 
